# ComplexGen

GeometricRefine/: CMakeLists.txt
GeometricRefine/GeometricRefine/: CMakeLists.txt
GeometricRefine/GeometricRefine/src/: SurfFitter.cpp  cxxopts.hpp  main.cpp
GeometricRefine/GeometricRefine/src/Mathematics/: RootsPolynomial.h
GeometricRefine/allquadricsdirect/: CMakeLists.txt
